# webpUtil

./: README.md
Distribution/: pyproject.toml
Distribution/src/webpUtil/: WEBPconvert.py  pyToExeConfig.json  setup.py  webpUtil.py
